<resources>
    <string name="app_name">Common Notes</string>
    <string name="action_settings">Settings</string>
    <string name="view_note">View Note</string>
    <string name="create_new_note">Create New Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="enter_note_title">enter the note title</string>
    <string name="note_description">Note Description</string>
    <string name="enter_note_description">enter the note description</string>
</resources>
