<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="event" type="com.codificador.commonnotes.NewNoteActivity"/>
        <variable
            name="note"
            type="com.codificador.commonnotes.CommonNote"/>
    </data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteActivity">

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >
        <Button
            android:onClick="@{()->event.onCancelNote()}"
            android:layout_margin="7dp"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bg_green"/>

        <Button
            android:onClick="@{()->event.onSaveNote()}"
            android:layout_margin="7dp"
            android:text="@string/save"
            android:id="@+id/buttonSave"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:background="@drawable/button_bg_primary_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_above="@id/footerLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/note_title"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:text="@={note.title}"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:id="@+id/editTextTitle"
            android:maxLines="1"
            android:minLines="1"
            android:hint="@string/enter_note_title"
            android:background="@drawable/edittext_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:padding="5dp"
            android:text="@string/note_description"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:text="@={note.description}"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/edittext_bg"
            android:id="@+id/editTextDescription"
            android:hint="@string/enter_note_description"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>
</layout>